src/gstyle/gstyle-colorlexer.c
/* Generated by re2c 0.16 on Wed Jun 29 18:01:24 2016 */
/* gstyle-colorlexer.c
 *
 * Copyright 2016 sebastien lafargue <slafargue@gnome.org>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

#define G_LOG_DOMAIN "gstyle-colorlexer"

#include <glib.h>

#include "gstyle-color.h"
#include "gstyle-color-item.h"
#include "gstyle-types.h"
#include "gstyle-utils.h"

#include "gstyle-colorlexer.h"

#define PARSE_ARRAY_INITIAL_SIZE  32

#define YYCTYPE     guchar
#define YYCURSOR    cursor
#define YYMARKER    s->ptr
#define YYCTXMARKER s->ptr_ctx

static void
gstyle_colorlexer_init (GstyleColorScanner *s,
                        const gchar        *data)
{
  s->start = data;
  s->cursor = data;
}

static gint
gstyle_colorlexer_scan (GstyleColorScanner *s)
{
  const gchar *cursor = s->cursor;

standard:
  s->start = cursor;


		{
			guchar yych;
			static const unsigned char yybm[] = {
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0, 128,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				128,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
			};
			yych = *YYCURSOR;
			if (yych <= '.') {
				if (yych <= '!') {
					if (yych <= '\t') {
						if (yych <= 0x00) goto yy3;
						if (yych <= 0x08) goto yy5;
						goto yy7;
					} else {
						if (yych == ' ') goto yy7;
						goto yy5;
					}
				} else {
					if (yych <= '(') {
						if (yych <= '"') goto yy7;
						if (yych <= '&') goto yy5;
						goto yy7;
					} else {
						if (yych == ',') goto yy7;
						goto yy5;
					}
				}
			} else {
				if (yych <= 0xDF) {
					if (yych <= ':') {
						if (yych <= '/') goto yy10;
						if (yych <= '9') goto yy5;
						goto yy7;
					} else {
						if (yych <= 0x7F) goto yy5;
						if (yych >= 0xC2) goto yy11;
					}
				} else {
					if (yych <= 0xF0) {
						if (yych <= 0xE0) goto yy12;
						if (yych <= 0xEF) goto yy13;
						goto yy14;
					} else {
						if (yych <= 0xF3) goto yy15;
						if (yych <= 0xF4) goto yy16;
					}
				}
			}
yy2:
yy3:
			++YYCURSOR;
			{s->cursor = cursor; return GSTYLE_COLOR_TOKEN_EOF;}
yy5:
			++YYCURSOR;
yy6:
			{ goto standard; }
yy7:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yybm[0+yych] & 128) {
				goto yy7;
			}
			{ s->start = cursor;goto color; }
yy10:
			yych = *++YYCURSOR;
			if (yych == '*') goto yy17;
			goto yy6;
yy11:
			yych = *++YYCURSOR;
			if (yych <= 0x7F) goto yy2;
			if (yych <= 0xBF) goto yy5;
			goto yy2;
yy12:
			yych = *++YYCURSOR;
			if (yych <= 0x9F) goto yy2;
			if (yych <= 0xBF) goto yy11;
			goto yy2;
yy13:
			yych = *++YYCURSOR;
			if (yych <= 0x7F) goto yy2;
			if (yych <= 0xBF) goto yy11;
			goto yy2;
yy14:
			yych = *++YYCURSOR;
			if (yych <= 0x8F) goto yy2;
			if (yych <= 0xBF) goto yy13;
			goto yy2;
yy15:
			yych = *++YYCURSOR;
			if (yych <= 0x7F) goto yy2;
			if (yych <= 0xBF) goto yy13;
			goto yy2;
yy16:
			yych = *++YYCURSOR;
			if (yych <= 0x7F) goto yy2;
			if (yych <= 0x8F) goto yy13;
			goto yy2;
yy17:
			++YYCURSOR;
			{ goto comment; }
		}


color:

		{
			guchar yych;
			unsigned int yyaccept = 0;
			static const unsigned char yybm[] = {
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0, 128,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				128,   0,   0,   0,   0, 128,   0,   0, 
				  0,   0,   0,   0, 128,   0, 128,   0, 
				128, 128, 128, 128, 128, 128, 128, 128, 
				128, 128,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
				  0,   0,   0,   0,   0,   0,   0,   0, 
			};
			yych = *YYCURSOR;
			if (yych <= 'o') {
				if (yych <= 'e') {
					if (yych <= '`') {
						if (yych <= 0x00) goto yy22;
						if (yych == '#') goto yy26;
						goto yy24;
					} else {
						if (yych <= 'b') {
							if (yych <= 'a') goto yy27;
							goto yy28;
						} else {
							if (yych <= 'c') goto yy29;
							if (yych <= 'd') goto yy30;
							goto yy24;
						}
					}
				} else {
					if (yych <= 'j') {
						if (yych <= 'g') {
							if (yych <= 'f') goto yy31;
							goto yy32;
						} else {
							if (yych <= 'h') goto yy33;
							if (yych <= 'i') goto yy34;
							goto yy24;
						}
					} else {
						if (yych <= 'l') {
							if (yych <= 'k') goto yy35;
							goto yy36;
						} else {
							if (yych <= 'm') goto yy37;
							if (yych <= 'n') goto yy38;
							goto yy39;
						}
					}
				}
			} else {
				if (yych <= 'x') {
					if (yych <= 's') {
						if (yych <= 'p') goto yy40;
						if (yych <= 'q') goto yy24;
						if (yych <= 'r') goto yy41;
						goto yy42;
					} else {
						if (yych <= 'u') {
							if (yych <= 't') goto yy43;
							goto yy24;
						} else {
							if (yych <= 'v') goto yy44;
							if (yych <= 'w') goto yy45;
							goto yy24;
						}
					}
				} else {
					if (yych <= 0xE0) {
						if (yych <= 0x7F) {
							if (yych <= 'y') goto yy46;
							goto yy24;
						} else {
							if (yych <= 0xC1) goto yy21;
							if (yych <= 0xDF) goto yy47;
							goto yy48;
						}
					} else {
						if (yych <= 0xF0) {
							if (yych <= 0xEF) goto yy49;
							goto yy50;
						} else {
							if (yych <= 0xF3) goto yy51;
							if (yych <= 0xF4) goto yy52;
						}
					}
				}
			}
yy21:
			YYCURSOR = YYMARKER;
			if (yyaccept == 0) {
				goto yy25;
			} else {
				goto yy229;
			}
yy22:
			++YYCURSOR;
			{s->cursor = cursor; return GSTYLE_COLOR_TOKEN_EOF;}
yy24:
			++YYCURSOR;
yy25:
			{ goto standard; }
yy26:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'e':	goto yy53;
			case 'a':	goto yy54;
			case 'b':	goto yy55;
			case 'c':	goto yy56;
			case 'd':	goto yy57;
			case 'f':	goto yy58;
			case 'g':	goto yy59;
			case 'h':	goto yy60;
			case 'i':	goto yy61;
			case 'k':	goto yy62;
			case 'l':	goto yy63;
			case 'm':	goto yy64;
			case 'n':	goto yy65;
			case 'o':	goto yy66;
			case 'p':	goto yy67;
			case 'r':	goto yy68;
			case 's':	goto yy69;
			case 't':	goto yy70;
			case 'v':	goto yy71;
			case 'w':	goto yy72;
			case 'y':	goto yy73;
			default:	goto yy25;
			}
yy27:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'l':	goto yy74;
			case 'n':	goto yy75;
			case 'q':	goto yy76;
			case 'z':	goto yy77;
			default:	goto yy25;
			}
yy28:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'e':	goto yy78;
			case 'i':	goto yy79;
			case 'l':	goto yy80;
			case 'r':	goto yy81;
			case 'u':	goto yy82;
			default:	goto yy25;
			}
yy29:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'a':	goto yy83;
			case 'h':	goto yy84;
			case 'o':	goto yy85;
			case 'r':	goto yy86;
			case 'y':	goto yy87;
			default:	goto yy25;
			}
yy30:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'a':	goto yy88;
			case 'e':	goto yy89;
			case 'i':	goto yy90;
			case 'o':	goto yy91;
			default:	goto yy25;
			}
yy31:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'i':	goto yy92;
			case 'l':	goto yy93;
			case 'o':	goto yy94;
			case 'u':	goto yy95;
			default:	goto yy25;
			}
yy32:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'a':	goto yy96;
			case 'h':	goto yy97;
			case 'o':	goto yy98;
			case 'r':	goto yy99;
			default:	goto yy25;
			}
yy33:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'o') goto yy100;
			if (yych == 's') goto yy101;
			goto yy25;
yy34:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'n') goto yy102;
			if (yych == 'v') goto yy103;
			goto yy25;
yy35:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'h') goto yy104;
			goto yy25;
yy36:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 'd') {
				if (yych == 'a') goto yy105;
				goto yy25;
			} else {
				if (yych <= 'e') goto yy106;
				if (yych == 'i') goto yy107;
				goto yy25;
			}
yy37:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'a':	goto yy108;
			case 'e':	goto yy109;
			case 'i':	goto yy110;
			case 'o':	goto yy111;
			default:	goto yy25;
			}
yy38:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'a') goto yy112;
			goto yy25;
yy39:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'l') goto yy113;
			if (yych == 'r') goto yy114;
			goto yy25;
yy40:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'a':	goto yy115;
			case 'e':	goto yy116;
			case 'i':	goto yy117;
			case 'l':	goto yy118;
			case 'o':	goto yy119;
			case 'u':	goto yy120;
			default:	goto yy25;
			}
yy41:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 'f') {
				if (yych == 'e') goto yy121;
				goto yy25;
			} else {
				if (yych <= 'g') goto yy122;
				if (yych == 'o') goto yy123;
				goto yy25;
			}
yy42:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'a':	goto yy124;
			case 'e':	goto yy125;
			case 'i':	goto yy126;
			case 'k':	goto yy127;
			case 'l':	goto yy128;
			case 'n':	goto yy129;
			case 'p':	goto yy130;
			case 't':	goto yy131;
			default:	goto yy25;
			}
yy43:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case 'a':	goto yy132;
			case 'e':	goto yy133;
			case 'h':	goto yy134;
			case 'o':	goto yy135;
			case 'u':	goto yy136;
			default:	goto yy25;
			}
yy44:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'i') goto yy137;
			goto yy25;
yy45:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'h') goto yy138;
			goto yy25;
yy46:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych == 'e') goto yy139;
			goto yy25;
yy47:
			yych = *++YYCURSOR;
			if (yych <= 0x7F) goto yy21;
			if (yych <= 0xBF) goto yy24;
			goto yy21;
yy48:
			yych = *++YYCURSOR;
			if (yych <= 0x9F) goto yy21;
			if (yych <= 0xBF) goto yy47;
			goto yy21;
yy49:
			yych = *++YYCURSOR;
			if (yych <= 0x7F) goto yy21;
			if (yych <= 0xBF) goto yy47;
			goto yy21;
yy50:
			yych = *++YYCURSOR;
			if (yych <= 0x8F) goto yy21;
			if (yych <= 0xBF) goto yy49;
			goto yy21;
yy51:
			yych = *++YYCURSOR;
			if (yych <= 0x7F) goto yy21;
			if (yych <= 0xBF) goto yy49;
			goto yy21;
yy52:
			yych = *++YYCURSOR;
			if (yych <= 0x7F) goto yy21;
			if (yych <= 0x8F) goto yy49;
			goto yy21;
yy53:
			yych = *++YYCURSOR;
			if (yych <= '@') {
				if (yych <= '/') goto yy21;
				if (yych <= '9') goto yy140;
				goto yy21;
			} else {
				if (yych <= 'F') goto yy140;
				if (yych <= '`') goto yy21;
				if (yych <= 'f') goto yy140;
				goto yy21;
			}
yy54:
			yych = *++YYCURSOR;
			if (yych <= 'k') {
				if (yych <= '@') {
					if (yych <= '/') goto yy21;
					if (yych <= '9') goto yy140;
					goto yy21;
				} else {
					if (yych <= 'F') goto yy140;
					if (yych <= '`') goto yy21;
					if (yych <= 'f') goto yy140;
					goto yy21;
				}
			} else {
				if (yych <= 'p') {
					if (yych <= 'l') goto yy74;
					if (yych == 'n') goto yy75;
					goto yy21;
				} else {
					if (yych <= 'q') goto yy76;
					if (yych == 'z') goto yy77;
					goto yy21;
				}
			}
yy55:
			yych = *++YYCURSOR;
			if (yych <= 'f') {
				if (yych <= 'F') {
					if (yych <= '/') goto yy21;
					if (yych <= '9') goto yy140;
					if (yych <= '@') goto yy21;
					goto yy140;
				} else {
					if (yych <= '`') goto yy21;
					if (yych == 'e') goto yy141;
					goto yy140;
				}
			} else {
				if (yych <= 'l') {
					if (yych == 'i') goto yy79;
					if (yych <= 'k') goto yy21;
					goto yy80;
				} else {
					if (yych <= 'r') {
						if (yych <= 'q') goto yy21;
						goto yy81;
					} else {
						if (yych == 'u') goto yy82;
						goto yy21;
					}
				}
			}
yy56:
			yych = *++YYCURSOR;
			if (yych <= 'g') {
				if (yych <= 'F') {
					if (yych <= '/') goto yy21;
					if (yych <= '9') goto yy140;
					if (yych <= '@') goto yy21;
					goto yy140;
				} else {
					if (yych <= '`') goto yy21;
					if (yych <= 'a') goto yy142;
					if (yych <= 'f') goto yy140;
					goto yy21;
				}
			} else {
				if (yych <= 'q') {
					if (yych <= 'h') goto yy84;
					if (yych == 'o') goto yy85;
					goto yy21;
				} else {
					if (yych <= 'r') goto yy86;
					if (yych == 'y') goto yy87;
					goto yy21;
				}
			}
yy57:
			yych = *++YYCURSOR;
			if (yych <= 'd') {
				if (yych <= '@') {
					if (yych <= '/') goto yy21;
					if (yych <= '9') goto yy140;
					goto yy21;
				} else {
					if (yych <= 'F') goto yy140;
					if (yych <= '`') goto yy21;
					if (yych <= 'a') goto yy143;
					goto yy140;
				}
			} else {
				if (yych <= 'h') {
					if (yych <= 'e') goto yy144;
					if (yych <= 'f') goto yy140;
					goto yy21;
				} else {
					if (yych <= 'i') goto yy90;
					if (yych == 'o') goto yy91;
					goto yy21;
				}
			}
yy58:
			yych = *++YYCURSOR;
			if (yych <= 'h') {
				if (yych <= '@') {
					if (yych <= '/') goto yy21;
					if (yych <= '9') goto yy140;
					goto yy21;
				} else {
					if (yych <= 'F') goto yy140;
					if (yych <= '`') goto yy21;
					if (yych <= 'f') goto yy140;
					goto yy21;
				}
			} else {
				if (yych <= 'n') {
					if (yych <= 'i') goto yy92;
					if (yych == 'l') goto yy93;
					goto yy21;
				} else {
					if (yych <= 'o') goto yy94;
					if (yych == 'u') goto yy95;
					goto yy21;
				}
			}
yy59:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy96;
			case 'h':	goto yy97;
			case 'o':	goto yy98;
			case 'r':	goto yy99;
			default:	goto yy21;
			}
yy60:
			yych = *++YYCURSOR;
			if (yych == 'o') goto yy100;
			if (yych == 's') goto yy101;
			goto yy21;
yy61:
			yych = *++YYCURSOR;
			if (yych == 'n') goto yy102;
			if (yych == 'v') goto yy103;
			goto yy21;
yy62:
			yych = *++YYCURSOR;
			if (yych == 'h') goto yy104;
			goto yy21;
yy63:
			yych = *++YYCURSOR;
			if (yych <= 'd') {
				if (yych == 'a') goto yy105;
				goto yy21;
			} else {
				if (yych <= 'e') goto yy106;
				if (yych == 'i') goto yy107;
				goto yy21;
			}
yy64:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy108;
			case 'e':	goto yy109;
			case 'i':	goto yy110;
			case 'o':	goto yy111;
			default:	goto yy21;
			}
yy65:
			yych = *++YYCURSOR;
			if (yych == 'a') goto yy112;
			goto yy21;
yy66:
			yych = *++YYCURSOR;
			if (yych == 'l') goto yy113;
			if (yych == 'r') goto yy114;
			goto yy21;
yy67:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy115;
			case 'e':	goto yy116;
			case 'i':	goto yy117;
			case 'l':	goto yy118;
			case 'o':	goto yy119;
			case 'u':	goto yy120;
			default:	goto yy21;
			}
yy68:
			yych = *++YYCURSOR;
			if (yych <= 'f') {
				if (yych == 'e') goto yy121;
				goto yy21;
			} else {
				if (yych <= 'g') goto yy122;
				if (yych == 'o') goto yy123;
				goto yy21;
			}
yy69:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy124;
			case 'e':	goto yy125;
			case 'i':	goto yy126;
			case 'k':	goto yy127;
			case 'l':	goto yy128;
			case 'n':	goto yy129;
			case 'p':	goto yy130;
			case 't':	goto yy131;
			default:	goto yy21;
			}
yy70:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'a':	goto yy132;
			case 'e':	goto yy133;
			case 'h':	goto yy134;
			case 'o':	goto yy135;
			case 'u':	goto yy136;
			default:	goto yy21;
			}
yy71:
			yych = *++YYCURSOR;
			if (yych == 'i') goto yy137;
			goto yy21;
yy72:
			yych = *++YYCURSOR;
			if (yych == 'h') goto yy138;
			goto yy21;
yy73:
			yych = *++YYCURSOR;
			if (yych == 'e') goto yy139;
			goto yy21;
yy74:
			yych = *++YYCURSOR;
			if (yych == 'i') goto yy145;
			goto yy21;
yy75:
			yych = *++YYCURSOR;
			if (yych == 't') goto yy146;
			goto yy21;
yy76:
			yych = *++YYCURSOR;
			if (yych == 'u') goto yy147;
			goto yy21;
yy77:
			yych = *++YYCURSOR;
			if (yych == 'u') goto yy148;
			goto yy21;
yy78:
			yych = *++YYCURSOR;
			if (yych == 'i') goto yy149;
			goto yy21;
yy79:
			yych = *++YYCURSOR;
			if (yych == 's') goto yy150;
			goto yy21;
yy80:
			yych = *++YYCURSOR;
			if (yych == 'a') goto yy151;
			if (yych == 'u') goto yy152;
			goto yy21;
yy81:
			yych = *++YYCURSOR;
			if (yych == 'o') goto yy153;
			goto yy21;
yy82:
			yych = *++YYCURSOR;
			if (yych == 'r') goto yy154;
			goto yy21;
yy83:
			yych = *++YYCURSOR;
			if (yych == 'd') goto yy155;
			goto yy21;
yy84:
			yych = *++YYCURSOR;
			if (yych == 'a') goto yy156;
			if (yych == 'o') goto yy157;
			goto yy21;
yy85:
			yych = *++YYCURSOR;
			if (yych == 'r') goto yy158;
			goto yy21;
yy86:
			yych = *++YYCURSOR;
			if (yych == 'i') goto yy159;
			goto yy21;
yy87:
			yych = *++YYCURSOR;
			if (yych == 'a') goto yy132;
			goto yy21;
yy88:
			yych = *++YYCURSOR;
			if (yych == 'r') goto yy160;
			goto yy21;
yy89:
			yych = *++YYCURSOR;
			if (yych == 'e') goto yy161;
			goto yy21;
yy90:
			yych = *++YYCURSOR;
			if (yych == 'm') goto yy162;
			goto yy21;
yy91:
			yych = *++YYCURSOR;
			if (yych == 'd') goto yy163;
			goto yy21;
yy92:
			yych = *++YYCURSOR;
			if (yych == 'r') goto yy164;
			goto yy21;
yy93:
			yych = *++YYCURSOR;
			if (yych == 'o') goto yy165;
			goto yy21;
yy94:
			yych = *++YYCURSOR;
			if (yych == 'r') goto yy166;
			goto yy21;
yy95:
			yych = *++YYCURSOR;
			if (yych == 'c') goto yy167;
			goto yy21;
yy96:
			yych = *++YYCURSOR;
			if (yych == 'i') goto yy168;
			goto yy21;
yy97:
			yych = *++YYCURSOR;
			if (yych == 'o') goto yy169;
			goto yy21;
yy98:
			yych = *++YYCURSOR;
			if (yych == 'l') goto yy170;
			goto yy21;
yy99:
			yych = *++YYCURSOR;
			if (yych == 'a') goto yy171;
			if (yych == 'e') goto yy172;
			goto yy21;
yy100:
			yych = *++YYCURSOR;
			if (yych == 'n') goto yy173;
			if (yych == 't') goto yy174;
			goto yy21;
yy101:
			yych = *++YYCURSOR;
			if (yych == 'l') goto yy175;
			goto yy21;
yy102:
			yych = *++YYCURSOR;
			if (yych == 'd') goto yy176;
			goto yy21;
yy103:
			yych = *++YYCURSOR;
			if (yych == 'o') goto yy177;
			goto yy21;
yy104:
			yych = *++YYCURSOR;
			if (yych == 'a') goto yy178;
			goto yy21;
yy105:
			yych = *++YYCURSOR;
			if (yych <= 'u') goto yy21;
			if (yych <= 'v') goto yy179;
